# weightfactors

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_generalized_raking.py
weightfactors/: __init__.py
weightfactors/raking/: generalized_raker.py
weightfactors/utils/: exceptions.py
