[tool.poetry]
name = "weightfactors"
version = "0.0.1"
description = "Calculate weight factors for survey data to approximate a representative sample"
authors = ["DemianvG <d.vangils@markteffect.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
