[tool.poetry]
name = "weightfactors"
version = "0.0.7"
description = "Calculate weight factors for survey data to approximate a representative sample"
authors = ["DemianvG <d.vangils@markteffect.nl>"]
readme = "README.md"
packages = [{include = "weightfactors"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
