[tool.poetry]
name = "weightfactors"
version = "0.0.10"
description = "Calculate weight factors for survey data to approximate a representative sample"
authors = ["DemianvG <d.vangils@markteffect.nl>"]
readme = "README.md"
packages = [{include = "weightfactors"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
ruff = "^0.15.6"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
